--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "@makerdao/testchain": "^1.0.7",
     "@testing-library/react": "^8.0.4",
     "babel-eslint": "^10.0.3",
+    "babel-plugin-styled-components": "^1.10.7",
     "eslint": "^6.6.0",
     "eslint-plugin-react": "^7.16.0",
     "eslint-plugin-react-hooks": "^2.2.0",
