--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -110,13 +110,13 @@ workflows:
             - install
       - deploy_staging:
           requires:
-            - test
+            - install
           filters:
             branches:
               ignore: master
       - deploy_aws_staging:
           requires:
-            - test
+            - install
           filters:
             branches:
               only: develop
