added testing to circleci, upgraded dai.js and testchain

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -110,12 +110,14 @@ workflows:
             - install
       - deploy_staging:
           requires:
+            - test
             - install
           filters:
             branches:
               ignore: master
       - deploy_aws_staging:
           requires:
+            - test
             - install
           filters:
             branches:
