--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "react-spring": "^8.0.15",
     "reinspect": "^1.0.1",
     "styled-components": "^4.1.3",
-    "styled-system": "^4.0.1"
+    "styled-system": "^4.0.1",
+    "window-scroll-manager": "^1.1.4"
   },
   "scripts": {
     "start": "NODE_ENV=development craco start",
