--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-navi": "^0.13.6",
     "react-scripts": "3.2.0",
     "react-spring": "^8.0.15",
+    "react-visibility-sensor": "^5.1.1",
     "reinspect": "^1.0.1",
     "styled-components": "^4.1.3",
     "styled-system": "^4.0.1",
