--- a/src/references/config.json
+++ b/src/references/config.json
@@ -25,6 +25,9 @@
     "999": "testnet",
     "1337": "testnet"
   },
+  "otherDeployments": {
+    "kovan-osm": "42"
+  },
   "networkDisplayNames": {
     "1": "Mainnet",
     "42": "Kovan Testnet",
