--- a/package.json
+++ b/package.json
@@ -53,8 +53,7 @@
     "react-visibility-sensor": "^5.1.1",
     "reinspect": "^1.0.1",
     "styled-components": "^4.1.3",
-    "styled-system": "^4.0.1",
-    "window-scroll-manager": "^1.1.4"
+    "styled-system": "^4.0.1"
   },
   "scripts": {
     "start": "NODE_ENV=development craco start",
