--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@testing-library/jest-dom": "^4.1.0",
     "@walletconnect/browser": "^1.0.0-beta.36",
     "@walletconnect/qrcode-modal": "^1.0.0-beta.36",
+    "babel-loader": "8.0.6",
     "bignumber.js": "^8.0.2",
     "body-scroll-lock": "^2.6.1",
     "decimal.js": "^10.2.0",
