Started calculator work

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.11",
     "lodash.debounce": "^4.0.8",
+    "lodash.uniqby": "^4.7.0",
     "mixpanel-browser": "^2.26.0",
     "navi": "^0.13.6",
     "prop-types": "^15.7.2",
