--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-loader": "8.0.6",
     "bignumber.js": "^8.0.2",
     "body-scroll-lock": "^2.6.1",
+    "dai-plugin-dcent-web": "^0.0.1",
     "decimal.js": "^10.2.0",
     "immer": "^3.1.1",
     "js-cookie": "^2.2.1",
