--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-jazzicon": "^0.1.3",
     "react-localization": "^1.0.13",
     "react-navi": "^0.13.6",
+    "react-navi-helmet-async": "^0.14.4",
     "react-scripts": "3.2.0",
     "react-slider": "^1.0.4",
     "react-spring": "^8.0.15",
