Skipping tests + removed SAI

--- a/src/references/config.json
+++ b/src/references/config.json
@@ -37,7 +37,7 @@
   "defaultNetwork": "1",
   "exTestchainApiUrl": "http://localhost:4000/chain",
   "showFeeds": ["ETH", "BAT", "USDC", "WBTC", "TUSD"],
-  "showWalletTokens": ["DAI", "DSR", "ETH", "SAI", "WETH", "BAT", "USDC", "WBTC", "TUSD", "KNC", "ZRX"],
+  "showWalletTokens": ["DAI", "DSR", "ETH", "WETH", "BAT", "USDC", "WBTC", "TUSD", "KNC", "ZRX"],
   "trackingPages": {
     "Overview": "Overview",
     "CDP": "Dashboard",
