--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@makerdao/ui-components-footer": "^0.1.16",
     "@makerdao/ui-components-header": "^0.1.11-alpha.6",
     "@makerdao/ui-components-onboarding": "^0.1.2",
+    "@myetherwallet/dai-plugin-mewconnect": "0.0.4",
     "@testing-library/jest-dom": "^4.1.0",
     "@walletconnect/browser": "^1.0.0-beta.36",
     "@walletconnect/qrcode-modal": "^1.0.0-beta.36",
@@ -62,7 +63,7 @@
   },
   "scripts": {
     "start": "NODE_ENV=development craco start",
-    "start:https": "HTTPS=true NODE_ENV=development craco start",
+    "start:https": "HTTPS=true NODE_ENV=development craco start -v",
     "build": "craco --max_old_space_size=8192 build",
     "precommit": "lint-staged",
     "test": "yarn testchain --ci craco test --runInBand",
