--- a/src/references/config.json
+++ b/src/references/config.json
@@ -36,7 +36,8 @@
   },
   "defaultNetwork": "1",
   "exTestchainApiUrl": "http://localhost:4000/chain",
-  "showWalletTokens": ["DAI", "DSR", "ETH", "SAI", "WETH", "BAT", "USDC", "WBTC", "TUSD", "KNC", "ZRX", "MANA"],
+  "showFeeds": ["ETH", "BAT", "USDC", "WBTC", "TUSD"],
+  "showWalletTokens": ["DAI", "DSR", "ETH", "SAI", "WETH", "BAT", "USDC", "WBTC", "TUSD", "KNC", "ZRX"],
   "trackingPages": {
     "Overview": "Overview",
     "CDP": "Dashboard",
