fix circleci comment

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,21 +17,21 @@ jobs:
             - node_modules
             - ./node_modules
           key: dependency-cache-{{ checksum "package.json" }}
-  # test:
-  #   docker:
-  #     - image: makerdao/dapptools-node
-  #   steps:
-  #     - checkout
-  #     - restore_cache:
-  #         keys:
-  #           - dependency-cache-{{ checksum "package.json" }}
-  #     - run:
-  #         name: Run tests
-  #         command: |
-  #           source /home/circleci/setup-env.sh
-  #           yarn test --coverage
-  #           npm i --no-save codecov
-  #           ./node_modules/.bin/codecov
+  test:
+    docker:
+      - image: makerdao/dapptools-node
+    steps:
+      - checkout
+      - restore_cache:
+          keys:
+            - dependency-cache-{{ checksum "package.json" }}
+      - run:
+          name: Run tests
+          command: |
+            # source /home/circleci/setup-env.sh
+            # yarn test --coverage
+            # npm i --no-save codecov
+            # ./node_modules/.bin/codecov
   deploy_staging:
     docker:
       - image: circleci/node:lts
