--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@makerdao/ui-components-header": "^0.1.11-alpha.6",
     "@makerdao/ui-components-onboarding": "^0.1.2",
     "@testing-library/jest-dom": "^4.1.0",
+    "@vimeo/player": "^2.13.0",
     "@walletconnect/browser": "^1.0.0-beta.36",
     "@walletconnect/qrcode-modal": "^1.0.0-beta.36",
     "babel-loader": "8.0.6",
