--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "@craco/craco": "^5.4.0",
     "@hot-loader/react-dom": "^16.8.4",
     "@makerdao/currency": "^0.9.9",
-    "@makerdao/dai": "^0.31.4",
+    "@makerdao/dai": "^0.32.4",
     "@makerdao/dai-plugin-config": "^0.2.15",
     "@makerdao/dai-plugin-ledger-web": "^0.9.7",
-    "@makerdao/dai-plugin-mcd": "^1.6.1",
+    "@makerdao/dai-plugin-mcd": "^1.6.3",
     "@makerdao/dai-plugin-trezor-web": "^0.9.6",
     "@makerdao/dai-plugin-walletconnect": "^0.0.8",
     "@makerdao/dai-plugin-walletlink": "^0.0.4",
@@ -78,25 +78,18 @@
     "node": ">=10.x.x"
   },
   "lint-staged": {
-    "*.js": [
-      "prettier --write --single-quote"
-    ]
+    "*.js": ["prettier --write --single-quote"]
   },
   "eslintConfig": {
     "extends": "react-app"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ],
+  "browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"],
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.4.4",
     "@babel/plugin-proposal-optional-chaining": "^7.6.0",
     "@babel/preset-env": "^7.4.4",
     "@babel/preset-react": "^7.0.0",
-    "@makerdao/testchain": "^1.1.12",
+    "@makerdao/testchain": "^1.1.18",
     "@testing-library/react": "^8.0.4",
     "babel-eslint": "10.0.3",
     "babel-plugin-styled-components": "^1.10.7",
