--- a/package.json
+++ b/package.json
@@ -26,11 +26,11 @@
     "@makerdao/ui-components-footer": "^0.1.16",
     "@makerdao/ui-components-header": "^0.1.11-alpha.6",
     "@makerdao/ui-components-onboarding": "^0.1.2",
-    "@testing-library/jest-dom": "^4.1.0",
+    "@testing-library/jest-dom": "^5.11.4",
     "@vimeo/player": "^2.13.0",
     "@walletconnect/browser": "^1.0.0-beta.36",
     "@walletconnect/qrcode-modal": "^1.0.0-beta.36",
-    "babel-loader": "8.0.6",
+    "babel-loader": "8.1.0",
     "bignumber.js": "^8.0.2",
     "body-scroll-lock": "^2.6.1",
     "dai-plugin-dcent-web": "^0.0.1",
@@ -53,7 +53,7 @@
     "react-jazzicon": "^0.1.3",
     "react-localization": "^1.0.13",
     "react-navi": "^0.13.6",
-    "react-scripts": "3.2.0",
+    "react-scripts": "3.4.3",
     "react-slider": "^1.0.4",
     "react-spring": "^8.0.15",
     "react-visibility-sensor": "^5.1.1",
@@ -67,7 +67,7 @@
     "start:https": "HTTPS=true NODE_ENV=development craco start",
     "build": "craco --max_old_space_size=8192 build",
     "precommit": "lint-staged",
-    "test": "yarn testchain --ci craco test --runInBand",
+    "test": "yarn testchain --ci craco test --runInBand --env=jest-environment-jsdom-sixteen",
     "testchain": "./node_modules/@makerdao/testchain/scripts/launch -s default --fast",
     "ci": "yarn test --coverage",
     "now-build": "yarn build",
@@ -90,13 +90,14 @@
     "@babel/preset-env": "^7.4.4",
     "@babel/preset-react": "^7.0.0",
     "@makerdao/testchain": "^1.1.18",
-    "@testing-library/react": "^8.0.4",
-    "babel-eslint": "10.0.3",
+    "@testing-library/react": "^11.0.4",
+    "babel-eslint": "10.1.0",
     "babel-plugin-styled-components": "^1.10.7",
     "eslint": "^6.6.0",
     "eslint-plugin-react": "^7.16.0",
     "eslint-plugin-react-hooks": "^2.2.0",
     "husky": "^1.3.1",
+    "jest-environment-jsdom-sixteen": "^1.0.3",
     "lighthouse": "^4.0.0",
     "lint-staged": "^9.2.5",
     "prettier": "^1.15.3",
