Added COMP, LRC, LINK

--- a/src/references/config.json
+++ b/src/references/config.json
@@ -36,7 +36,25 @@
   },
   "defaultNetwork": "1",
   "exTestchainApiUrl": "http://localhost:4000/chain",
-  "showWalletTokens": ["DAI", "DSR", "ETH", "SAI", "WETH", "BAT", "USDC", "WBTC", "TUSD", "KNC", "ZRX", "MANA", "USDT", "PAXUSD"],
+  "showWalletTokens": [
+    "DAI",
+    "DSR",
+    "ETH",
+    "SAI",
+    "WETH",
+    "BAT",
+    "USDC",
+    "WBTC",
+    "TUSD",
+    "KNC",
+    "ZRX",
+    "MANA",
+    "USDT",
+    "PAXUSD",
+    "COMP",
+    "LRC",
+    "LINK"
+  ],
   "trackingPages": {
     "Overview": "Overview",
     "CDP": "Dashboard",
