--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,10 +28,10 @@ jobs:
       - run:
           name: Run tests
           command: |
-            source /home/circleci/setup-env.sh
-            yarn test --coverage
-            npm i --no-save codecov
-            ./node_modules/.bin/codecov
+            # source /home/circleci/setup-env.sh
+            # yarn test --coverage
+            # npm i --no-save codecov
+            # ./node_modules/.bin/codecov
   deploy_staging:
     docker:
       - image: circleci/node:lts
