--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.2.6-rc.1",
   "license": "AGPL",
   "private": true,
-  "homepage": "https://mcd.makerdao.com",
+  "homepage": "https://oasis.app/borrow",
   "contributors": [
     "Michael Elliot <mike@makerdao.com>",
     "Joshua Levine <joshua@makerdao.com>",
