--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,7 +54,7 @@ jobs:
           keys:
             - dependency-cache-{{ checksum "package.json" }}
       - run:
-          name: Build production artifact
+          name: Build staging artifact
           command: |
             CI=false yarn build
       - run:
@@ -70,7 +70,7 @@ jobs:
             aws configure set aws_access_key_id $STAGE_AWS_ACCESS_KEY_ID
             aws configure set aws_secret_access_key $STAGE_AWS_SECRET_ACCESS_KEY
 
-            aws s3 sync build s3://$STAGE_AWS_BUCKET_NAME/ --delete --exclude 'trade/*' --exclude 'expired/*'
+            aws s3 sync build s3://$STAGE_AWS_BUCKET_NAME/borrow/ --delete --exclude 'trade/*' --exclude 'expired/*'
             aws cloudfront create-invalidation --distribution-id $STAGE_AWS_CF_ID --paths "/*"
   deploy_prod:
     docker:
