--- a/src/references/config.json
+++ b/src/references/config.json
@@ -53,7 +53,9 @@
     "PAXUSD",
     "COMP",
     "LRC",
-    "LINK"
+    "LINK",
+    "YFI",
+    "BAL"
   ],
   "trackingPages": {
     "Overview": "Overview",
