Revert "update deployment config"
This reverts commit bc59f59f2d9d75f2b4e41508afbd1ed77e6ef55e.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -111,12 +111,14 @@ workflows:
       - deploy_staging:
           requires:
             - test
+            - install
           filters:
             branches:
               ignore: master
       - deploy_aws_staging:
           requires:
-            - deploy_staging
+            - test
+            - install
           filters:
             branches:
               only: develop
