--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.2.6-rc.1",
   "license": "AGPL",
   "private": true,
-  "homepage": "https://mcd.makerdao.com",
+  "homepage": "/borrow/",
   "contributors": [
     "Michael Elliot <mike@makerdao.com>",
     "Joshua Levine <joshua@makerdao.com>",
@@ -17,6 +17,7 @@
     "@makerdao/dai": "^0.32.4",
     "@makerdao/dai-plugin-config": "^0.2.15",
     "@makerdao/dai-plugin-ledger-web": "^0.9.10",
+    "@makerdao/dai-plugin-portis": "0.0.4",
     "@makerdao/dai-plugin-mcd": "^1.6.10",
     "@makerdao/dai-plugin-trezor-web": "^0.9.6",
     "@makerdao/dai-plugin-walletconnect": "^0.0.8",
@@ -26,6 +27,7 @@
     "@makerdao/ui-components-footer": "^0.1.16",
     "@makerdao/ui-components-header": "^0.1.11-alpha.6",
     "@makerdao/ui-components-onboarding": "^0.1.2",
+    "@myetherwallet/dai-plugin-mewconnect": "0.0.17",
     "@testing-library/jest-dom": "^5.11.4",
     "@vimeo/player": "^2.13.0",
     "@walletconnect/browser": "^1.0.0-beta.36",
