--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "contributors": [
     "Michael Elliot <mike@makerdao.com>",
     "Joshua Levine <joshua@makerdao.com>",
-    "Adrian le Bas <adrian@makerdao.com>"
+    "Adrian le Bas <adrian@makerdao.com>",
+    "Fernando D. Tiberti <fertiberti@gmail.com>"
   ],
   "dependencies": {
     "@craco/craco": "^5.6.4",
