added RenBTC & Uni

--- a/src/references/config.json
+++ b/src/references/config.json
@@ -56,7 +56,9 @@
     "LINK",
     "YFI",
     "BAL",
-    "GUSD"
+    "GUSD",
+    "UNI",
+    "RENBTC"
   ],
   "trackingPages": {
     "Overview": "Overview",
