added AAVE & UNIV2DAIETH

--- a/src/references/config.json
+++ b/src/references/config.json
@@ -58,7 +58,9 @@
     "BAL",
     "GUSD",
     "UNI",
-    "RENBTC"
+    "RENBTC",
+    "AAVE",
+    "UNIV2DAIETH"
   ],
   "trackingPages": {
     "Overview": "Overview",
