Add new collateral types

--- a/src/references/config.json
+++ b/src/references/config.json
@@ -60,7 +60,10 @@
     "UNI",
     "RENBTC",
     "AAVE",
-    "UNIV2DAIETH"
+    "UNIV2DAIETH",
+    "UNIV2WBTCETH",
+    "UNIV2USDCETH"
+
   ],
   "trackingPages": {
     "Overview": "Overview",
