added UNIV2DAIUSDC and UNIV2ETHUSDT

--- a/src/references/config.json
+++ b/src/references/config.json
@@ -62,8 +62,9 @@
     "AAVE",
     "UNIV2DAIETH",
     "UNIV2WBTCETH",
-    "UNIV2USDCETH"
-
+    "UNIV2USDCETH",
+    "UNIV2DAIUSDC",
+    "UNIV2ETHUSDT"
   ],
   "trackingPages": {
     "Overview": "Overview",
