added UNIV2LINKETH & UNIV2UNIETH

--- a/src/references/config.json
+++ b/src/references/config.json
@@ -64,7 +64,9 @@
     "UNIV2WBTCETH",
     "UNIV2USDCETH",
     "UNIV2DAIUSDC",
-    "UNIV2ETHUSDT"
+    "UNIV2ETHUSDT",
+    "UNIV2LINKETH",
+    "UNIV2UNIETH"
   ],
   "trackingPages": {
     "Overview": "Overview",
