--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -88,6 +88,34 @@ jobs:
 
             aws --profile default s3 sync build s3://$AWS_BUCKET_NAME/borrow-old/ --delete --exclude 'trade/*' --exclude 'expired/*'
             aws --profile default cloudfront create-invalidation --distribution-id $AWS_CF_ID --paths "/*"
+  deploy_oasis_prod:
+    docker:
+      - image: circleci/node:lts
+    resource_class: large
+    steps:
+      - checkout
+      - restore_cache:
+          keys:
+            - dependency-cache-{{ checksum "package.json" }}
+      - run:
+          name: Build production artifact
+          command: |
+            CI=false yarn build
+      - run:
+          name: Deploy to production
+          command: |
+            sudo apt update
+            sudo apt install python-pip
+            pip install --upgrade --user awscli
+            export PATH=$HOME/.local/bin:$PATH
+
+            aws configure set default.region $OASIS_PROD_AWS_REGION
+            aws configure set default.output json
+            aws configure set aws_access_key_id $OASIS_PROD_AWS_ACCESS_KEY_ID
+            aws configure set aws_secret_access_key $OASIS_PROD_AWS_SECRET_ACCESS_KEY
+
+            aws --profile default s3 sync build s3://$OASIS_PROD_AWS_BUCKET_NAME/borrow-old/ --delete --exclude 'trade/*' --exclude 'expired/*'
+            aws --profile default cloudfront create-invalidation --distribution-id $OASIS_PROD_AWS_CF_ID --paths "/*"
 
 workflows:
   version: 2
@@ -110,3 +138,9 @@ workflows:
           filters:
             branches:
               only: master
+      - deploy_oasis_prod:
+          requires:
+            - install
+          filters:
+            branches:
+              only: new_oasis.app
