--- a/.github/workflows/aws-staging.yml
+++ b/.github/workflows/aws-staging.yml
@@ -48,7 +48,7 @@ jobs:
 
     - name: Deploy to S3
       run: |
-        aws s3 sync ./build s3://${{ env.S3_BUCKET }}/borrow-old/ --delete --exclude 'trade/*' --exclude 'expired/*' --dryrun
+        aws s3 sync ./build s3://${{ env.S3_BUCKET }}/borrow-old/ --delete --exclude 'trade/*' --exclude 'expired/*'
 
     - name: Invalidate CloudFront
       run: aws cloudfront create-invalidation --distribution-id ${{ env.CF_DISTRIBUTION_ID }} --paths "/borrow-old"
